--- a/css/pablo.css
+++ b/css/pablo.css
@@ -121,29 +121,39 @@ header {
     list-style: none;
 }
 
+
+
+
 .indice {
     display: block;
     margin-top: 6.5rem;
-    background-color: aqua;
 }
 
 .viñeta1 {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-    font-size: 1.5rem;
 }
 
 .viñeta1 > h1 {
-    display: flex;
+    display: block;
     color: var(---color21);
     font-size: 2rem;
-}
-.viñeta1 > h3 {
-    margin: 0rem 2rem
+    margin: 0rem 0rem;
 }
 
-.viñeta1 > p {
+.Cuadro1 {
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 1.5rem;
+    justify-content: space-between;
+}
+
+.Cuadro1 > h3 {
+    margin: 0rem 2rem;
+    display: block;
+}
+
+.Cuadro1 > p {
     margin: 0rem 2rem;
     color: var(---color3);
     font-weight: 600;
@@ -152,14 +162,185 @@ header {
 .viñeta2 {
     display: flex;
     flex-wrap: wrap;
+    margin-top: 4rem;
+}
+
+.viñeta2 > h1 {
+    display: block;
+    color: var(---color21);
+    font-size: 2rem;
+    margin: 0rem 0rem;
+}
+
+.Cuadro2 {
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 1.5rem;
     justify-content: space-between;
-    margin-top: 2rem;
 }
 
-.viñeta2 > h3 {
-    margin: 0rem 2rem
+.Cuadro2 > h3 {
+    margin: 0rem 2rem;
+    display: block;
 }
 
-.viñeta2 > p {
-     margin: 0rem 2rem;
+.Cuadro2 > p {
+    margin: 0rem 2rem;
+    color: var(---color3);
+    font-weight: 600;
+}
+
+.viñeta3 {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 4rem;
+}
+
+.viñeta3 > h1 {
+    display: block;
+    color: var(---color21);
+    font-size: 2rem;
+    margin: 0rem 0rem;
+}
+
+.Cuadro3 {
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 1.5rem;
+    justify-content: space-between;
+}
+
+.Cuadro3 > h3 {
+    margin: 0rem 2rem;
+    display: block;
+}
+
+.Cuadro3 > p {
+    margin: 0rem 2rem;
+    color: var(---color3);
+    font-weight: 600;
+}
+
+.viñeta4 {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 4rem;
+}
+
+.viñeta4 > h1 {
+    display: block;
+    color: var(---color21);
+    font-size: 2rem;
+    margin: 0rem 0rem;
+}
+
+.Cuadro4 {
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 1.5rem;
+    justify-content: space-between;
+}
+
+.Cuadro4 > h3 {
+    margin: 0rem 2rem;
+    display: block;
+}
+
+.Cuadro4 > p {
+    margin: 0rem 2rem;
+    color: var(---color3);
+    font-weight: 600;
+}
+
+.viñeta5 {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 4rem;
+}
+
+.viñeta5 > h1 {
+    display: block;
+    color: var(---color21);
+    font-size: 2rem;
+    margin: 0rem 0rem;
+}
+
+.Cuadro5 {
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 1.5rem;
+    justify-content: space-between;
+}
+
+.Cuadro5 > h3 {
+    margin: 0rem 2rem;
+    display: block;
+}
+
+.Cuadro5 > p {
+    margin: 0rem 2rem;
+    color: var(---color3);
+    font-weight: 600;
+}
+
+.viñeta6 {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 4rem;
+}
+
+.viñeta6 > h1 {
+    display: block;
+    color: var(---color21);
+    font-size: 2rem;
+    margin: 0rem 0rem;
+}
+
+.Cuadro6 {
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 1.5rem;
+    justify-content: space-between;
+}
+
+.Cuadro6 > h3 {
+    margin: 0rem 2rem;
+    display: block;
+}
+
+.Cuadro6 > p {
+    margin: 0rem 2rem;
+    color: var(---color3);
+    font-weight: 600;
+}
+
+.viñeta7 {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 4rem;
+}
+
+.viñeta7 > h1 {
+    display: block;
+    color: var(---color21);
+    font-size: 2rem;
+    margin: 0rem 0rem;
+}
+
+.Cuadro7 {
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 1.5rem;
+    justify-content: space-between;
+}
+
+.Cuadro7 > h3 {
+    margin: 0rem 2rem;
+    display: block;
+}
+
+.Cuadro7 > p {
+    margin: 0rem 2rem;
+    color: var(---color3);
+    font-weight: 600;
 }
