--- a/css/david.css
+++ b/css/david.css
@@ -1,9 +1,13 @@
+body{
+    background-color: ---color12;
+}
+
 .titulo{
     position: absolute;
     width: 247px;
     height: 47px;
-    left: 72px;
-    top: 90px;
+    left: 560px;
+    top: 75px;
 
     font-family: 'Inter', sans-serif;
     font-style: normal;
@@ -15,9 +19,9 @@
 .caja{
     box-sizing: border-box;
     position: absolute;
-    width: 250px;
-    height: 300px;
-    left: calc(47% - 285px/2 - 0.5px);
+    width: 300px;
+    height: 350px;
+    left: calc(47% - 280px/2 - 0.5px);
     top: calc(50% - 400px/2 + 0.5px);
 
     background: #FFFFFF;
@@ -31,7 +35,7 @@
     top: 20%;
     bottom: 69.7%;
 
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Inter', sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
@@ -60,7 +64,7 @@
     top: 40%;
     bottom: 69.7%;
 
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Inter', sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
@@ -86,8 +90,8 @@
     position: absolute;
     width: 163px;
     height: 45px;
-    left: 50px;
-    top: 200px;
+    left: 60px;
+    top: 240px;
 
 /* principal */
 
@@ -97,7 +101,7 @@
    cursor: pointer;
 }
 .iniciar{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Inter', sans-serif;
     text-transform: capitalize;
 
     color: #FFFFFF;
