Actulizacion de colores

--- a/css/config.css
+++ b/css/config.css
@@ -34,4 +34,11 @@ html, body{
     ---color21: rgb(255, 230, 0);
     ---color22: rgb(35, 123, 255);
     ---color23: rgb(245, 245, 245);
+    ---color24: rgba(242, 248, 243, 1);
+    ---color25: rgb(255, 255, 255);
+    ---color26: rgb(255, 131, 92);
+    ---color27: rgb(255, 66, 66);
+    ---color28: rgb(141, 147, 165);
+    ---color29: rgb(175, 31, 31);
+    
 }
