--- a/css/keyli.css
+++ b/css/keyli.css
@@ -1,10 +1,13 @@
+
+
 .caja1{
+    background-image: url(/img-keily/img.png);
     width: 375px;
-    background-color: var(---color23);
     height: 93rem;
     margin-left: 50rem;
     border-radius: 1.5rem;
 }
+/**********************/
 
 /***********************/
 .header{
@@ -39,10 +42,10 @@
 }
 
 .imgperfil{
-    background-color: violet;
     height: 8rem;
     width: 8rem;
     border-radius: 50rem;
+    border: var(---color23) 5px solid ;
 }
 /*****/
 .caja2_1{
@@ -109,7 +112,7 @@
     margin-left: -0.3rem;
     width: 75px;
     height: 0.5rem;
-    background-color:  var(---color15);
+    background-color:  white;
     border-radius: 20rem ;
     border: none;
 
@@ -155,7 +158,7 @@
 .caja3_1{
     width: 22rem;
     height: 9rem;
-    background-color: var(---color15);
+    background-color: white;
 
     border-radius: 1.5rem;
     margin-left: -1rem;
@@ -333,7 +336,7 @@
 
 /****************************************/
 .caja6{
-    background-color: var(---color10);
+    background: linear-gradient(92.23deg, #FFB4B4 2.08%, #FF6F6F 97.09%);
     height: 8.2rem;
     margin: 2.5rem;
     padding: 1.5rem;
@@ -499,7 +502,7 @@
 }
 
 .circleone{
-    background-color: var(---color23);
+    background-color: white;
     width: 5rem;
     height: 5rem;
     border-radius: 3rem;
@@ -512,7 +515,7 @@
 }
 
 .circletwo{
-    background-color: var(---color10);
+    background-color:#D9D9D9;
     width: 4rem;
     height: 4rem;
     border-radius: 2rem;
