--- a/css/claudia.css
+++ b/css/claudia.css
@@ -1,7 +1,10 @@
+body{
+    background-color: var(---color5);
+}
 main{
     width: 375px;
     border-radius: 3rem;
-    background-color: aquamarine;
+    background-color: white;
     margin-left: 50rem;
 }
 .sec{
@@ -10,14 +13,13 @@ main{
     padding-top: 5rem;
 }
 .imagen{
-    width: 5rem;
-    height: 5rem;
+    width: 10rem;
+    height: 10rem;
     border-radius: 1rem;
-    margin: 5rem 0 0 3rem;
+    margin: 5rem 2rem 0 3rem;
 }
 .text{
-   background-color: blue;
-   margin-top: 6.5rem;    
+   margin-top: 8rem;    
    text-align: justify;
    font-size: 2rem;
 } 
@@ -29,6 +31,7 @@ main{
     width: 1.5rem;
     height: 1.5rem;
 }
+
 /**/
 .list{
     display: flex;
@@ -42,10 +45,15 @@ main{
     margin: 0 1rem 0 3rem;
 }
 .titu1{
-    background-color: blue;
     margin-top: 1rem;    
     text-align: justify;
     font-size: 2rem;
+}
+.flecha1{
+    margin: 1rem 0 0 15rem;
+    font-size: 2rem;
+    color: var(---color3);
+   
 }
 
 .ico2{
@@ -55,10 +63,15 @@ main{
     margin: 0 1rem 0 3rem;
 }
 .titu2{
-   background-color: blue;
     margin-top: 1rem;    
     text-align: justify;
     font-size: 2rem;
+}
+.flecha2{
+    margin: 1rem 0 0 15rem;
+    font-size: 2rem;
+    color: var(---color3);
+  
 }
 
 .ico3{
@@ -68,10 +81,15 @@ main{
     margin: 0 1rem 0 3rem;
 }
 .titu3{
-    background-color: blue;
     margin-top: 1rem;    
     text-align: justify;
     font-size: 2rem;
+}
+.flecha3{
+    margin: 1rem 0 0 15rem;
+    font-size: 2rem;
+    color: var(---color3);
+    
 }
 
 .ico4{
@@ -81,10 +99,15 @@ main{
     margin: 0 1rem 0 3rem;
 }
 .titu4{
-    background-color: blue;
     margin-top: 1rem;    
     text-align: justify;
     font-size: 2rem;
+}
+.flecha4{
+    margin: 1rem 0 0 15rem;
+    font-size: 2rem;
+    color: var(---color3);
+   
 }
 
 
@@ -95,11 +118,22 @@ main{
     margin: 0 1rem 0 3rem;
 }
 .titu5{
-    background-color: blue;
     margin-top: 1rem;    
     text-align: justify;
     font-size: 2rem;
 }
+.apart5{
+    display: flex;
+    flex-direction: row;
+    width: 105rem;
+}
+.flecha{
+    margin: 2rem 0 0 19rem;
+    font-size: 2rem;
+    color: var(---color3);
+    
+}
+
 
 .ico6{
     width: 5rem;
@@ -108,10 +142,15 @@ main{
     margin: 0 1rem 0 3rem;
 }
 .titu6{
-    background-color: blue;
     margin-top: 1rem;    
     text-align: justify;
     font-size: 2rem;
+}
+.flecha6{
+    margin: 1rem 0 0 19rem;
+    font-size: 2rem;
+    color: var(---color3);
+   
 }
 .fott{
     display: flex;
@@ -119,13 +158,18 @@ main{
     padding-top: 5rem;
 }
 .fot1{
-    width: 5rem;
-    height: 5rem;
+    width: 3rem;
+    height: 3rem;
     border-radius: 1rem;
-    margin: 0 1rem 0 3rem;
+    margin: 0 2rem 0 4rem;
+}
+.linea{
+    width: 5rem;
+    height: 1rem;
+    margin-left: 30rem;
+    margin-top: 2rem;
 }
 .titu6{
-    background-color: blue;
     margin-top: 1rem;    
     text-align: justify;
     font-size: 2rem;
