--- a/css/melissa.css
+++ b/css/melissa.css
@@ -1,16 +1,20 @@
 body{
     width: 10rem;
     height: 10rem;
-    background-color: rgba(242, 248, 243, 1);
+    background-color: var(---color3);
 
   
 }
 .caja1{
-    height: 20rem;
+    height: 23rem;
     width: 37.6rem;
     background-color: var(---color8);
     border-top-right-radius: 3rem;
     border-top-left-radius: 3rem;
+    
+    border-radius: 3rem;
+    
+    text-align: center;
 }
 .cabeza{
     padding-top: 3rem;
@@ -57,12 +61,133 @@ body{
     margin-top: 2rem;
     margin-left: 2rem;
 }
+.vip{
+    width: 90%;
+    margin-top: 1rem;
+}
+.caja2{
+    width: 32.20rem;
+    height: 11rem;    
+    margin-left: 2.8rem;
+    padding-bottom: 2rem;
+
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-around;
+    text-align: center;
+    background-color: var(---color23);
+
+    border-bottom-left-radius: 2rem;
+    border-bottom-right-radius: 2rem;
+}
+.opcion1 img{
+    height: 4rem;
+    width: auto;
+}
+.opcion2 img{
+    height: 4rem;
+    width: auto;
+}
+.opcion3 img{
+    height: 4rem;
+    width: auto;
+}
+.opcion4 img{
+    height: 4rem;
+    width: auto;
+}
+
+
+.caja3{
+   display: flex;
+   flex-direction: column;
+   margin-left: 2.8rem;
+
+}
+.box1{
+    background-color:var(---color23);
+    width: 32.20rem;
+    height: 11.5rem;
+    border-radius: 2rem;
+    margin-top: 2rem;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.box1 .uno{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 1rem;
+    padding-left: 1.7rem;
+    padding-right:1.7rem;
+}
+
+.box1 .uno p{
+    font-size: 1.6rem;
+    font-weight: 600;
+}
+.box1 .uno a{
+    text-decoration: none;
+    font-size: 2rem;
+    color: var(---color2);
+}
+
+
+.box1 .dos{
+    display: flex;
+    justify-content:flex-start;
+    align-items: center;
+    margin-top: 1.7rem;
+    padding-left: 1.7rem;
+}
+.box1 .dos p{
+    font-size: 1.5rem;
+    color:rgba(160, 167, 186, 1);
+}
+.pestaña{
+    width: auto;
+    height: 1rem;
+    margin-left: 1rem;
+}
+.box1 .tres{
+ margin-top: 0.7rem;
+ padding-left: 1.7rem;
+}
+.box1 .tres p{
+    font-size: 3rem;
+    font-weight: 600;
+}
+
+
 footer{
     margin-top: 50rem;
     height: 8rem;
     width: 37.6rem;
-    background-color: brown;
+    background-color: var(---color23);
 
     border-bottom-left-radius: 2rem;
     border-bottom-right-radius: 2rem;
+    
+    
+}
+.superior {
+    display: flex;
+    justify-content: right;
+
+}
+.superior img{
+    width: 15%;
+    margin-right: 1.5rem;
+}
+.icons{
+    margin-top: 1rem;
+    margin-bottom: 3rem;
+    
+    display: flex;
+    justify-content: space-around;
+}
+.icons img{
+    height: 4rem;
+    width: auto;
 }
