colores de keyli y melissa

--- a/css/config.css
+++ b/css/config.css
@@ -40,5 +40,6 @@ html, body{
     ---color27: rgb(255, 66, 66);
     ---color28: rgb(141, 147, 165);
     ---color29: rgb(175, 31, 31);
-    
+    ---color30: rgba(181, 159, 157, 1);
+    ---color31: rgba(160, 167, 186, 1);
 }
