--- a/css/melissa.css
+++ b/css/melissa.css
@@ -17,25 +17,24 @@ body{
     text-align: center;
 }
 .cabeza{
-    padding-top: 3rem;
+    padding-top: 0.9rem;
     display: flex;
     
 }
-.buscador{
-    width: 55%;
-    height: 3.8rem;
-    background-color: var(---color23) ;
-    border-radius: 3rem;
+.buscador img{
+    width: 20rem;
+    height: 6rem;
     margin-left: 2rem;
 }
 .A{
     width: 30%;
-    height: 4rem;
+    height: 6rem;
     margin-left: 1rem;
     
     display: flex;
     justify-content: space-between;
     align-items: center;
+
 }
 .A img{
     height: 2rem;
@@ -52,7 +51,8 @@ body{
     width: 8rem;
     height: 8rem;
     margin-left: 2rem;
-    margin-top: 2rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 .perfil p{
     font-size: 2rem;
@@ -245,7 +245,7 @@ body{
     width: 32.20rem;
     margin-top: 2rem;
     background-color: var(---color25);
-   
+    padding-top: 0.5rem;
     border-radius: 2rem;
     display: flex;
     justify-content: space-between
@@ -290,7 +290,7 @@ body{
 .num2{
     display: flex;
     align-items: center;
-    margin-top: -1rem;
+    margin-top: -1.5rem;
 }
 .num2 p{
     color: var(---color28);
@@ -302,6 +302,7 @@ body{
 }
 .num2 .B{
     color: var(---color18);
+    margin-left: -0.5rem;
 }
 .num2 .D{
     color: var(---color8);
@@ -353,8 +354,8 @@ footer{
 
 }
 .superior img{
-    width: 15%;
-    margin-right: 1.5rem;
+    width: 12%;
+    margin-right: 2rem;
 }
 .icons{
     margin-top: 1rem;
